# cpp_tools

./: README.md  TODO  ct_create_project.py
templates/: list.txt
templates/AoC/: CMakeLists.txt  CMakePresets.json  README.md
templates/AoC/src/: part1.cpp
templates/basic/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
templates/basic-devcontainer/: README.md
templates/basic-devcontainer/.devcontainer/: Dockerfile  devcontainer.json
templates/basic-devcontainer/.devcontainer/conan-profiles/: default
templates/basic-np/: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
templates/creation/: CMakeLists.txt  CMakePresets.json  README.md  conan_provider.cmake
